@@ -1,3 +1,11 @@
+2008-03-13  Boyd Timothy <btimothy@gmail.com> 
+
+	* src/TaskGroup.cs: Add an entry widget at the top of the window for users
+	  to create new tasks.  Don't scroll automatically to a newly created task
+	  (scrolling still needs to be fixed). Highlight the newly-created task. 
+	  Put "New task..." in the entry box and highlight it by default and right
+	  after a task is created.
+
 2008-03-13  Sandy Armstrong <sanfordarmstrong@gmail.com> 
 
 	* data/images/tasque.svg: Cleaner SVG courtesy of Jakub Steiner.
